--- a/mallet/index.html
+++ b/mallet/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="_mallet_layout" lang="en-US"><!-- path   : mallet/index.html -->
-  <!-- layout : dove/pugs/mallet -->
+  <!-- layout : dove/_source/_layouts/mallet -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>Home | Dove</title><!-- End Jekyll SEO tag -->
@@ -8,26 +8,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/mallet/css/style.css?r=2511.01.6057"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/mallet/css/style.css?r=2511.01.1041"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <main class="_app __fadein" id="_main">
-      <div class="container-lg px-3 markdown-body" id="layout">
-        <header class="header">
-          <div id="_header-bar">
-            <div class="_flex">
-              <div class="_flex-main">
-                <div class="_logo"><a href="/dove">Dove</a></div>
-              </div>
-            </div>
-          </div>
-        </header>
-        <nav class="_nav">
-          <div><b>Mallet</b>
+    <div class="_views">
+      <div class="_view _app __fadein">
+        <div class="_view_layout container-lg px-3 markdown-body">
+          <header class="header">
+            <div class="_logo"><a href="/dove">Dove</a></div>
+          </header>
+          <nav class="_nav">
+            <div><b>Mallet</b>
 <i class="_icon"><i class="isvg">
-                <svg viewBox="0 0 24 24">
-                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                </svg></i></i>
+                  <svg viewBox="0 0 24 24">
+                    <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                  </svg></i></i>
 <a href="/dove/mallet/preview.html">Preview</a>
 <a href="/dove/mallet/legacy.html">Legacy</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
@@ -35,67 +30,70 @@
 <a href="/dove/mallet/">Home</a>
 <a href="/dove/mallet/page.html">Page</a>
 <a href="/dove/mallet/404.html">404</a>
-          </div>
-        </nav>
-        <article class="_article">
-          <style>
-            .hero-box-2 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
-            .hero-box-2 {
-              margin:.5rem 0;
-              padding: 1px 2rem 3rem;
-              background: linear-gradient(45deg, #37b4aa, #b05eef, transparent);
-              color: #fff;
-            }
-            .hero-box-2 hr { border-color: #cdb8e3 }
-            .hero-box-2 .site-description {
-              margin-left:5.3rem;
-              font-weight: 300;
-              font-size: 1.1em;
-              color: #000;
-            }
-            ._dark .hero-box-2 .site-description { color: #fff }
-          </style>
-          <div class="hero-box-2 box">
-            <h1 id="_hero-title">⚒️ Heroic Title</h1>
-            <p class="site-description">Your site's description or mission statement.</p>
-          </div>
-          <hr/>
-          <style>
-            .hero-box-1 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
-            .hero-box-1 { padding:0 }
-            .hero-box-1 .site-description {
-              margin-left:5.3rem;
-              font-weight: 300;
-              font-size: 1.1em;
-            }
-            .hero-box-1 .hero-hr { margin-top:45px }
-          </style>
-          <div class="hero-box-1 box">
-            <h1 id="_hero-title">⚒️ Heroic Title</h1>
-            <p class="site-description">Your site's description or mission statement.</p>
-            <hr class="hero-hr"/>
-          </div>
-          <p><code>// content for : Home</code></p>
-        </article>
-        <footer class="footer">
-          <hr/>
-          <p><code>// footer</code></p>
-          <hr/>
-          <p class="text-right text-grey"><small>
-              This site is open source.
-              <a href="https://github.com/techie-joe/dove/edit/main/_pugs/mallet/index.html.pug" target="_edit">Improve this page</a>.</small></p>
-        </footer>
+            </div>
+          </nav>
+          <main class="_main">
+            <article class="_article">
+              <style>
+                .hero-box-2 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
+                .hero-box-2 {
+                  margin:.5rem 0;
+                  padding: 1px 2rem 3rem;
+                  background: linear-gradient(45deg, #37b4aa, #b05eef, transparent);
+                  color: #fff;
+                }
+                .hero-box-2 hr { border-color: #cdb8e3 }
+                .hero-box-2 .site-description {
+                  margin-left:5.3rem;
+                  font-weight: 300;
+                  font-size: 1.1em;
+                  color: #000;
+                }
+                ._dark .hero-box-2 .site-description { color: #fff }
+              </style>
+              <div class="hero-box-2 box">
+                <h1 id="_hero-title">⚒️ Heroic Title</h1>
+                <p class="site-description">Your site's description or mission statement.</p>
+              </div>
+              <hr/>
+              <style>
+                .hero-box-1 #_hero-title { margin-left:1.6em;text-indent:-1.7em }
+                .hero-box-1 { padding:0 }
+                .hero-box-1 .site-description {
+                  margin-left:5.3rem;
+                  font-weight: 300;
+                  font-size: 1.1em;
+                }
+                .hero-box-1 .hero-hr { margin-top:45px }
+              </style>
+              <div class="hero-box-1 box">
+                <h1 id="_hero-title">⚒️ Heroic Title</h1>
+                <p class="site-description">Your site's description or mission statement.</p>
+                <hr class="hero-hr"/>
+              </div>
+              <p><code>// content for : Home</code></p>
+            </article>
+          </main>
+          <footer class="_footer">
+            <hr/>
+            <p><code>// footer</code></p>
+            <hr/>
+            <p class="text-right text-grey"><small>
+                This site is open source.
+                <a href="https://github.com/techie-joe/dove/edit/main/_pugs/mallet/index.html.pug" target="_edit">Improve this page</a>.</small></p>
+          </footer>
+          <div class="_theme_switch _needjs"><a class="_bt -h" href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
+                  <svg viewBox="0 0 24 24">
+                    <path d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z" fill="currentColor" fill-opacity="1"></path>
+                  </svg></i></i></a></div>
+        </div>
       </div>
-      <div class="_theme_switch _needjs"><a class="_bt -h" href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
-              <svg viewBox="0 0 24 24">
-                <path d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z" fill="currentColor" fill-opacity="1"></path>
-              </svg></i></i></a></div>
       <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
       <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
       <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.6057"></script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.1041"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
       <script>anchors?.add();</script>
-    </main>
+    </div>
   </body>
 </html>
