--- a/prime/preview.html
+++ b/prime/preview.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US"><!-- path   : prime/preview.html -->
-  <!-- layout : dove/pugs/prime -->
+  <!-- layout : dove/_source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>Preview | Dove</title><!-- End Jekyll SEO tag -->
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.01.6059"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.01.1042"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -482,7 +482,7 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
     <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.6059"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.01.1042"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors?.add();</script>
   </body>
