--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.4842"/>
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.2733"/>
     <style>._nav { display:none !important }</style>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -17,7 +17,7 @@
       <div class="_view">
         <div class="_layout _1200">
           <div class="container-lg px-3 my-5 markdown-body">
-            <h1 class="_logo"><a href="/dove">Dove</a></h1>
+            <h1 class="_logo"><a href="/dove/">Dove</a></h1>
             <nav class="_nav">
               <div class="_layout">
                 <p><code>// nav</code></p>
@@ -29,7 +29,7 @@
                 <h1 class="hero">🕊️ Dove is a theme development project.</h1>
                 <pre class="scrollable highlight" style="max-height:213px"><b class="text-gray"># _config.pug</b>
 version      : 0.0.3
-revision     : 2511.03.4842
+revision     : 2511.03.2733
 title        : Dove
 description  : Dove is a theme development project.
 author       : Techie Joe
@@ -136,7 +136,7 @@ source_url   : https://github.com/techie-joe/dove</pre>
                 <hr class="thin border-gray-light"/>
                 <p class="text-right text-grey"><small>
                     This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug" target="_edit">Improve this page</a>.</small></p>
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/index.html.pug" target="_edit">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
@@ -154,7 +154,7 @@ source_url   : https://github.com/techie-joe/dove</pre>
     <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
     <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.4842"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.2733"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors?.add();</script>
   </body>
