--- a/nova/404.html
+++ b/nova/404.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/nova/css/style.css?r=2511.03.4845"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/nova/css/style.css?r=2511.03.2734"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -16,7 +16,7 @@
         <div class="_layoutx">
           <header class="_header">
             <div class="_layoutx">
-              <div class="_logo"><a href="/dove">Dove</a></div>
+              <div class="_logo"><a href="/dove/">Dove</a></div>
             </div>
           </header>
           <nav class="_nav">
@@ -47,8 +47,7 @@
               </div>
               <div style="margin-top:3rem"></div>
               <hr/>
-              <p><a class="button text-secondary" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
-<a class="button text-secondary" href="/dove" title="Go to Home Page">Home</a>
+              <p><a class="button text-secondary _bt -flat -l" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a><a class="button text-secondary _bt -flat -l" href="/dove/" title="Go to Home Page">Home</a><a class="button text-secondary _bt -flat -l" href="/dove/pages" title="Go to Pages">Pages</a><a class="button text-secondary _bt -flat -l" href="/dove/posts" title="Go to Posts">Posts</a>
               </p>
             </article>
           </main>
@@ -69,7 +68,7 @@
       <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
       <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
       <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.4845"></script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.2734"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
       <script>anchors?.add();</script>
     </div>
