--- a/nova/preview.html
+++ b/nova/preview.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/nova/css/style.css?r=2511.03.4846"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/nova/css/style.css?r=2511.03.2734"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -16,7 +16,7 @@
         <div class="_layoutx">
           <header class="_header">
             <div class="_layoutx">
-              <div class="_logo"><a href="/dove">Dove</a></div>
+              <div class="_logo"><a href="/dove/">Dove</a></div>
             </div>
           </header>
           <nav class="_nav">
@@ -41,7 +41,7 @@
 
 <h1>Heading 1</h1>
 
-<p><img src="/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml mb" width="400" height="300" /></p>
+<p><img src="https://techie-joe.github.io/core/images/299-400x300.jpg" alt="Featured image" class="float-right ml mb" width="400" height="300" /></p>
 
 <p class="text-justify big-first">Writing an article can be exciting when you can add few things here and there. The <code class="language-plaintext highlighter-rouge">big-first</code> class will enlarge the first letter of a paragraph. While <code class="language-plaintext highlighter-rouge">text-justify</code> neatly aligns your text to its container. To nudge the first line of a paragraph, use the <code class="language-plaintext highlighter-rouge">indent</code> class. Indentation gives a sense of order and clarity, making an article easier to read. Include images and <a href="#" onclick="event.preventDefault();">hyperlinks</a> to make things more engaging.</p>
 
@@ -138,7 +138,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <h2>Including images</h2>
 
-<p><img src="/core/images/299-1024x368.jpg" alt="Large image" class="full-width" /></p>
+<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" class="full-width" /></p>
 
 <blockquote class="text-small mt-0">
   <p>Images for this demo came from <a href="https://picsum.photos/" target="_blank">picsum.photos</a>.</p>
@@ -150,9 +150,9 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <hr class="mb-3" />
 
-<p><img src="/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb pa bg-white" width="64" height="64" />
-<img src="/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb pa bg-white" width="64" height="64" />
-<img src="/core/images/core-64x64.png" alt="Small image" class="centered mb pa bg-white" width="64" height="64" /></p>
+<p><img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Left Octocat" class="float-left mr mb pa bg-white" width="64" height="64" />
+<img src="https://techie-joe.github.io/core/images/octocat-64x64.png" alt="Right Octocat" class="float-right ml mb pa bg-white" width="64" height="64" />
+<img src="https://techie-joe.github.io/core/images/core-64x64.png" alt="Small image" class="centered mb pa bg-white" width="64" height="64" /></p>
 
 <hr class="mt-3" />
 
@@ -466,7 +466,7 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
               <hr/>
               <p class="text-right text-grey"><small>
                   This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_pugs/nova/preview.html.pug" target="_edit">Improve this page</a>.</small></p>
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/nova/preview.html.pug" target="_edit">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
@@ -482,7 +482,7 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
       <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
       <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
       <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.4846"></script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.2734"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
       <script>anchors?.add();</script>
     </div>
