--- a/prime/index.html
+++ b/prime/index.html
@@ -8,14 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.4846"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.2734"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
       <div class="_view">
         <div class="_layout _1200">
           <div class="container-lg px-3 my-5 markdown-body">
-            <h1 class="_logo"><a href="/dove">Dove</a></h1>
+            <h1 class="_logo"><a href="/dove/">Dove</a></h1>
             <nav class="_nav">
               <div class="_layout">
                 <p><b>Prime</b>
@@ -81,7 +81,7 @@
                 <hr class="thin border-gray-light"/>
                 <p class="text-right text-grey"><small>
                     This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/index.html.pug" target="_edit">Improve this page</a>.</small></p>
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/index.html.pug" target="_edit">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
@@ -99,7 +99,7 @@
     <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
     <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.4846"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.2734"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors?.add();</script>
   </body>
