--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
+---
+layout: html
+title: 'Home'
+---
 <!DOCTYPE html>
-<html class="_prime_layout" lang="en-US"><!-- path   : index.html -->
+<html class="_prime_html" lang="en-US"><!-- path   : index.html -->
   <!-- layout : dove/_source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>Index | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta id="_color_scheme" name="color-scheme" content="light"/>
+    <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.2733"/>
-    <style>._nav { display:none !important }</style>
-    <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/prime/css/style.css?r=2511.03.3840"/>
+    <style>
+      ._logo,
+      ._nav { display:none !important }
+      h1.hero { font-family: 'Arial',system-ui,sans-serif }
+    </style><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -29,7 +36,7 @@
                 <h1 class="hero">🕊️ Dove is a theme development project.</h1>
                 <pre class="scrollable highlight" style="max-height:213px"><b class="text-gray"># _config.pug</b>
 version      : 0.0.3
-revision     : 2511.03.2733
+revision     : 2511.03.3840
 title        : Dove
 description  : Dove is a theme development project.
 author       : Techie Joe
@@ -39,7 +46,7 @@ home_url     : /dove
 
 lang         : en-US
 theme_color  : #222
-color_scheme : light
+color_scheme : light dark
 ghost        : bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv
 
 google_analytics     : (undefined)
@@ -50,7 +57,10 @@ source_url   : https://github.com/techie-joe/dove</pre>
                   <p><b>Dove</b>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/dove/md">Dove.md</a>
+<a href="/dove/md">Markdown</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+
+<a href="/dove/test">Test</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="https://github.com/techie-joe/dove" target="_edit">Repository</a>
@@ -59,6 +69,7 @@ source_url   : https://github.com/techie-joe/dove</pre>
 <a href="https://techie-joe.github.io/proto" target="_test">Proto</a>
                   </p>
                 </nav>
+                <hr class="thin border-gray-light"/>
                 <nav>
                   <ul>
                     <li><b>Core</b>
@@ -154,7 +165,7 @@ source_url   : https://github.com/techie-joe/dove</pre>
     <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
     <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.2733"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.3840"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors?.add();</script>
   </body>
